random href practice

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hii</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>Nicole White</h1>
+        <img src = 'https://avatars1.githubusercontent.com/u/56371568?s=460&u=576c01ec836c9d48619406ac37593fb78a58fd88&v=4' alt = 'Nicole smiling'/>
+        <h3>Loves</h3>
+        <ul>
+            <li>Travel</li>
+            <li>Dining</li>
+            <li>Reading</li>
+            <li>Nature</li>
+        </ul>
+        <h4>My sites:</h4>
+        <button onClick = "location.href = 'https://nicolewhite.us/'">My portfolio</button>
+    </body>
 </html>
